-Added game draw logic -Fixed reset bug

--- a/TicTacToe_MicahRamsingh.vbproj
+++ b/TicTacToe_MicahRamsingh.vbproj
@@ -117,6 +117,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="bin\Debug\TicTacToe_MicahRamsingh.exe.config" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -127,6 +128,14 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\TicTacToe_MicahRamsingh.exe" />
+    <Content Include="bin\Debug\TicTacToe_MicahRamsingh.pdb" />
+    <Content Include="bin\Debug\TicTacToe_MicahRamsingh.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Release\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
